--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.3",
     "sass": "^1.80.4",
     "sass-loader": "^16.0.2",
     "web-vitals": "^2.1.4"
