--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "CowTinder",
-	"name": "CowTinder",
+	"short_name": "DairyMatch",
+	"name": "DairyMatch",
 	"icons": [
 		{
 			"src": "/img/logo.svg",
